# ask-me-anything

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
ama/: config.py  db.py  main.py  models.py  repository.py  schemas.py
ama/alembic/versions/: 7530f9ec000c_create_text_chunk_table.py
ask_me_anything/: config.py  db.py  main.py  models.py  repository.py  schemas.py
ask_me_anything/alembic/versions/: 7530f9ec000c_create_text_chunk_table.py  d413abd4a166_add_chat_tables.py
ask_me_anything/templates/: ask_anything.html  base.html  chat.html
