[project]
name = "ask-me-anything"
description = "bring context and ask any question"
version = "0.1.0"
authors = [
    { name = "Albert Sadowski", email = "asadowski@mailbox.org" }
]
dependencies = [
    "alembic",
    "beautifulsoup4",
    "fastapi",
    "openai[embeddings]",
    "pgvector",
    "psycopg2",
    "sqlalchemy",
    "uvicorn"
]
