[project]
name = "ask-me-anything"
description = "bring context and ask any question"
version = "0.1.0"
authors = [
    { name = "Albert Sadowski", email = "asadowski@mailbox.org" }
]
dependencies = [
    "alembic",
    "fastapi",
    "langchain",
    "openai[embeddings]",
    "pgvector",
    "psycopg2",
    "sqlalchemy",
    "uvicorn"
]
