[project]
name = "ask-me-anything"
description = "bring context and ask any question"
version = "0.1.0"
authors = [
    { name = "Albert Sadowski", email = "asadowski@mailbox.org" }
]
dependencies = [
    "alembic",
    "bs4",
    "fastapi",
    "jinja2",
    "langchain",
    "openai[embeddings]",
    "pgvector",
    "psycopg2",
    "python-multipart",
    "sqlalchemy",
    "uvicorn"
]
